--- a/school_php_programming/index.html
+++ b/school_php_programming/index.html
@@ -1,25 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link href="ST.CSS" rel="stylesheet" type="text/css">
-	<title>Title</title>
-</head>
-<body>
-<table border="2" width="100%">
-	<tr>
-		<td>AAA</td>
-		<td>&nbsp;</td>
-		<td>BBB</td>
-		<td><img src="https://avatars.mds.yandex.net/get-pdb/70729/c6784b38-5d32-4c6c-92ca-94ad17a53d5a/s1200"
-		         height=""></td>
-	</tr>
-</table>
-
-<p class="abc" id="abc">	Наш текст, который будет курсивом и жирным </p>
-<p> </p>
-<p> Без стилей оформления </p>
-
-
-</body>
+<!DOCTYPE HTML PUBLIC "">
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Title</title>
+        <meta name="description" content="Уроки" >
+        <meta name="keywords" content="Уроки">
+        <link href="st.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div id="header" align="center">
+            <div>
+            <ul>
+                <li>Главная</li>
+                <li>Новости</li>
+                <li>ЧаВо</li>
+                <li>Контакты</li>
+            </ul>
+        </div>
+        <div id="content">
+            <div>
+                <p>
+                    Контент главной станицы<br>
+                    Продолжаем информацию<br>
+                    Много информации
+                </p>
+                <p>
+                    Второй абзац, тоже полезный текст
+                </p>
+            </div>
+            <div class="class1">
+                <p >
+                    Второй блок внутри контента Второй блок внутри контента Второй блок внутри контента<br>
+                    Второй блок внутри контента Второй блок внутри контента Второй блок внутри контента
+                </p>
+            </div>
+        </div>
+        <div id="footer">
+            Creative-Team &copy; 2010-2013
+        </div>
+    </body>
 </html>
